# nativas-contracts

./: .eslintignore  .eslintrc.json  .gitignore  README.md  brownie-config.yaml  ganache.sh  package.json  pyproject.toml  remappings.txt  truffle-config.js  tsconfig.json  tsconfig.migrate.json
contracts/access/: AccessControl.sol  AccessControlEnumerable.sol  AccessControlEnumerableMock.sol  AccessControlMock.sol  Controllable.sol  NativasControl.sol  NativasRoles.sol  Ownable.sol
contracts/erc1155/: ERC1155.sol  ERC1155Common.sol  ERC1155Holder.sol
contracts/erc1155Receiver/: ERC1155Holder.sol  NativasHolder.sol
contracts/erc1167/: ERC1167.sol  ERC1167Holder.sol  NativasFactory.sol
scripts/: __init__.py
tests/: AccessControl.ts
types/: AccessControlEnumerable.d.ts  AccessControlEnumerableMock.d.ts  AccessControlEnumerableStub.d.ts  AccessControlMock.d.ts  AccessControlStub.d.ts  ContextMock.d.ts  Controllable.d.ts  ERC1155Base.d.ts  ERC1155ERC20.d.ts  ERC1155Offsettable.d.ts  ERC1155Pausable.d.ts  ERC1155Supplyable.d.ts  ERC1155Swappable.d.ts  ERC1155URIStorable.d.ts  ERC165Mock.d.ts  ERC165Stub.d.ts  IAccessControlEnumerable.d.ts  IERC1155.d.ts  IERC1155ERC20.d.ts  IERC1155Holder.d.ts  IERC1155Logger.d.ts  IERC1155MetadataURI.d.ts  IERC1155Receiver.d.ts  IERC1155Supplyable.d.ts  IERC20Adapter.d.ts  NativasAdapter.d.ts  NativasControl.d.ts  NativasFactory.d.ts  NativasHolder.d.ts  NativasOffset.d.ts  NativasToken.d.ts  OwnableMock.d.ts  OwnableStub.d.ts  PausableMock.d.ts  PausableStub.d.ts  Roles.d.ts  index.d.ts
utils/: 1_DeployContracts.ts  __init__.py
(+104 files in other folders)
